# fd-sense

./: .gitignore  .pre-commit-config.yaml   README.md  pyproject.toml
configs/plots/: overleaf_plots_settings.yaml
configs/presentation/: slide_1.yaml
data/: observations.npy  posterior_samples.npy  prior_samples.npy
data/ark/: timing_bb.npz  timing_qf_decomp.npz  timing_qf_full.npz
data/bioassay/: n.npy  observations.npy  samples.npy  samples_ld50.npy  x.npy
data/ecmo/: observations.npy  posterior_samples.npy  prior_samples.npy
data/ising_model/: PseudoBayes_size=10_theta=5.0_dnum=1000_pnum=2000_data_lr_optimisation.npy  PseudoBayes_size=2_theta=5.0_dnum=1000_pnum=2000_data_lr_optimisation.npy  PseudoBayes_size=4_theta=5.0_dnum=1000_pnum=2000_data_lr_optimisation.npy  PseudoBayes_size=6_theta=5.0_dnum=1000_pnum=2000_data_lr_optimisation.npy  PseudoBayes_size=8_theta=5.0_dnum=1000_pnum=2000_data_lr_optimisation.npy
data/multidimensional_gaussian/: posterior_samples.npy
data/multivariate_gaussian/: observations.npy  posterior_samples.npy  prior_samples.npy
data/univariate_gaussian/: observations.npy  posterior_samples.npy  prior_samples.npy
playground/: run_nonparametric_cli.py  run_parametric_cli.py  zoo.py
playground/posteriordb/: run_ark.py  run_kilpisjarvi.py
presentation/: slide_1.py  slide_1_figure_18_bayesian_workflow_paper.py  slide_constraints.py
src/basis_functions/: basis_functions.py
src/bayesian_model/: __init__.py  base.py  gaussian.py  inverse_wishart.py
src/discrepancies/: fisher.py  ksd.py  (+4 more)
tests/: calculate_ksd.py
(+222 files in other folders)
